# beats

./: Cargo.toml  Makefile  buf.gen.yaml  buf.yaml
crates/proto-gen/: Cargo.toml
crates/proto-gen/src/: lib.rs
docs/: architecture-decisions.md  clean-architecture-layers.md  migrate-to-connect.md
services/library-api/: Cargo.toml
services/library-api/src/: lib.rs  server.rs
services/library-api/src/adapters/: mod.rs
services/library-api/src/adapters/grpc/: library_service.rs  mod.rs
services/library-api/src/application/: mod.rs
services/library-api/src/application/usecases/: mod.rs
services/library-api/src/application/usecases/get_health/: handler.rs  mod.rs
services/library-api/src/domain/: mod.rs
services/library-api/src/domain/repositories/: mod.rs  song_repository.rs
services/library-api/src/infrastructure/: mod.rs  noop_song_repository.rs
