[package]
name = "library-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "library-server"
path = "src/server.rs"

[[bin]]
name = "library-client"
path = "src/client.rs"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
